js/js.translator/testData/incremental/invalidation/defaultArgWrapperRemoved/lib1/l1.0.kt
fun foo(x: Int = 40): Int = x + 2
